--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,8 +34,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "org.dejv.dobdroid"
-        minSdkVersion 29
+        applicationId "org.dejv78.gulldroid"
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -46,8 +46,6 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
-            shrinkResources false
-            minifyEnabled false
         }
     }
 }
